# paper-radar

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  LICENSE  README.md  config.yaml  config.yaml.example  config_loader.py  docker-compose.nas.yml  docker-compose.yml  fetcher.py  journal_fetcher.py  main.py  paper_history.py  pdf_handler.py  pyproject.toml  reporter.py  webapp.py
.history/agents/: analyzer_agent_20260204114606.py
agents/: __init__.py  analyzer_agent.py  base.py  filter_agent.py  summary_agent.py
models/: __init__.py  paper.py
scripts/: build-and-push.sh  entrypoint.sh  test-in-docker.sh
templates/: email.html
web/: app.js  index.html  styles.css
